force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/CSAT_Sales_Experience__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Sales_Experience__c</fullName>
    <formula>Value(Overall_Sales_Experience_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Sales Experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>