force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Likeliness_to_Recommend_CNC__c.field-meta.xml
<CustomField>
    <fullName>Likeliness_to_Recommend_CNC__c</fullName>
    <inlineHelpText>How likely are you to recommend Cycle &amp; Carriage to a friend?</inlineHelpText>
    <label>Likeliness to Recommend CNC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>