force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Other_Feedbacks__c.field-meta.xml
<CustomField>
    <fullName>Other_Feedbacks__c</fullName>
    <inlineHelpText>Any suggestions or feedback that you&apos;d like us to know?</inlineHelpText>
    <label>Other Feedbacks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>