force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Overall_Sales_Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Sales_Experience_Rating__c</fullName>
    <inlineHelpText>Please rate your overall sales experience from booking your car to car collection</inlineHelpText>
    <label>Overall Sales Experience Rating</label>
    <length>200</length>
    <type>Text</type>
</CustomField>