force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Permission_to_Contact_Customer__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Contact_Customer__c</fullName>
    <inlineHelpText>Can we contact you regarding your feedback?</inlineHelpText>
    <label>Permission to Contact Customer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>