force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipName>Sales_Experience_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>