force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant__c</fullName>
    <formula>Sales_Agreement__r.Owner:User.LastName + &quot; &quot; +  Sales_Agreement__r.Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Consultant</label>
    <type>Text</type>
</CustomField>