force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Sales_Consultant_Service_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant_Service_Rating__c</fullName>
    <inlineHelpText>Please rate the service provided by your Sales Consultant.</inlineHelpText>
    <label>Sales Consultant Service Rating</label>
    <length>200</length>
    <type>Text</type>
</CustomField>