force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Sales_Consultant_Strength__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant_Strength__c</fullName>
    <inlineHelpText>Thanks! What are you happy with?</inlineHelpText>
    <label>Sales Consultant Strength</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>