force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Sales_Experience_Room_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Experience_Room_for_Improvement__c</fullName>
    <inlineHelpText>We’re sorry to hear that. What can be improved?</inlineHelpText>
    <label>Sales Experience Room for Improvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>