force-app/main/default/objects/GFB_Sales_Experience_Survey__c/fields/Sales_Experience_Strength__c.field-meta.xml
<CustomField>
    <fullName>Sales_Experience_Strength__c</fullName>
    <inlineHelpText>That’s great! What have we done well?</inlineHelpText>
    <label>Sales Experience Strength</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>