force-app/main/default/objects/GFB_Sales_Experience_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Agreement__c</columns>
    <columns>Sales_Consultant__c</columns>
    <columns>Action_Taken_Time__c</columns>
    <columns>Negative_Survey__c</columns>
    <columns>Age_of_record__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>